--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -18,19 +18,18 @@
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
       <!-- Hero section -->
       <section>
-        <h1>
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
@@ -159,10 +158,9 @@
     </main>
 
     <footer>
-      <a href="/">Web Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
